--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>React Time</title>
+  <title>Number Guesser React</title>
 </head>
 <body>
-  <div class="application"></div>
+  <div class="app"></div>
   <script src="main.bundle.js"></script>
 </body>
 </html>
