--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>Number Guesser React</title>
 </head>
 <body>
-  <div class="app"></div>
+  <div id="app"></div>
   <script src="main.bundle.js"></script>
 </body>
 </html>
